--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.9.3"
+    "@astrojs/react": "^4.3.0",
+    "@fontsource-variable/roboto": "^5.2.6",
+    "@stylexjs/stylex": "^0.5.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "astro": "^5.9.3",
+    "astro-stylex": "^0.3.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
+
