--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/react": "^4.3.0",
     "@fontsource-variable/roboto": "^5.2.6",
+    "@fontsource/dseg14-classic": "^5.2.5",
     "@stylexjs/stylex": "^0.5.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -20,4 +21,3 @@
     "react-dom": "^19.1.0"
   }
 }
-
